--- a/package.json
+++ b/package.json
@@ -13,13 +13,19 @@
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
     "expo": "~54.0.10",
+    "expo-secure-store": "~15.0.7",
     "expo-status-bar": "~3.0.8",
+    "pocketbase": "^0.26.2",
     "react": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-dotenv": "^3.4.11",
     "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.16.0",
     "react-native-vector-icons": "^10.3.0"
   },
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "babel-preset-expo": "^54.0.3"
+  }
 }
